objects/revcult__Wizard__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Current_Step__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Had_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Had Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Progress__c</fullName>
        <label>Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Use_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Files</label>
        <type>Checkbox</type>
    </fields>
    <label>Wizard</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Wizard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>